# pixi_samples

./: README.md
samples/calculatorform/: README.md  pixi.toml
samples/calculatorform/src/: CMakeLists.txt
samples/my_ros2_project/: .gitignore  README.md  pixi.toml
samples/my_ros2_project/src/my_cpp_package/: CMakeLists.txt  package.xml
samples/my_ros2_project/src/my_cpp_package/src/: my_cpp_node.cpp
samples/my_ros2_project/src/my_package/: package.xml  setup.cfg  setup.py
samples/rendercontrol_opengl/: README.md  pixi.toml
samples/rendercontrol_opengl/src/: CMakeLists.txt  demo.qml
